--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <h2>Good Name Game</h2>
-
-  <input id="playerName" placeholder="ชื่อผู้เล่น">
+  <span id="playLeftCounter" style="color: #e74c3c; font-weight: bold; margin-left: 10px;">(เหลือ 3 ครั้ง)</span><br>
+  <input id="playerName" placeholder="ชื่อมึงอะ">
   <input id="wordInput" placeholder="ใส่ชื่อภาษาอังกฤษ">
   <br><button onclick="submitName()">ส่งชื่อ</button>
 
