--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
   <h2>Good Name Game</h2>
-  <span id="playLeftCounter" style="color: #e74c3c; font-weight: bold; margin-left: 10px;">(เหลือ 3 ครั้ง)</span><br>
-  <input id="playerName" placeholder="ชื่อมึงอะ">
-  <input id="wordInput" placeholder="ใส่ชื่อภาษาอังกฤษ">
-  <br><button onclick="submitName()">ส่งชื่อ</button>
+  <input id="username" placeholder="Username">
+  <input id="password" type="password" placeholder="Password" >
+  <input id="displayName" placeholder="Good Name Game">
+  <br>
+  <button onclick="login()">SUBMIT</button>
 
   <h3>Leaderboard</h3>
   <ul id="leaderboard"></ul>
